Solutions to Day 5-11.
Some prettier than others