@@ -23,7 +23,7 @@ public class Day05 {
     }
 
     public long getLowestLocationForSeeds(List<String> input) {
-        long[] seeds = Arrays.stream(input.get(0).substring(7).split(" ")).mapToLong(Long::parseLong).toArray();
+        long[] seeds = Arrays.stream(input.getFirst().substring(7).split(" ")).mapToLong(Long::parseLong).toArray();
 
         for(int i = 2 ; i < input.size() ; i++){
             long[] tempSeeds = Arrays.copyOf(seeds, seeds.length);
@@ -43,28 +43,80 @@ public class Day05 {
     }
 
     public long getLowestLocationForSeedRange(List<String> input) {
-        long[] seedsRange = Arrays.stream(input.get(0).substring(7).split(" ")).mapToLong(Long::parseLong).toArray();
-        List<Long> seeds = new ArrayList<>();
-        for(int i = 0 ; i < seedsRange.length - 1 ; i += 2) {
-            for(long j = seedsRange[i] ; j < seedsRange[i] + seedsRange[i + 1] ; j++) {
-                seeds.add(j);
-            }
+        long[] seeds = Arrays.stream(input.getFirst().substring(7).split(" ")).mapToLong(Long::parseLong).toArray();
+        List<SeedRange> seedRanges = new ArrayList<>();
+        for(int i = 0 ; i < seeds.length ; i += 2) {
+            seedRanges.add(new SeedRange(seeds[i], seeds[i] + seeds[i + 1] - 1));
         }
 
+        List<List<Mapping>> allMappings = new ArrayList<>();
         for(int i = 2 ; i < input.size() ; i++){
-            List<Long> tempSeeds = new ArrayList<>(seeds);
+            List<Mapping> singleMappings = new ArrayList<>();
             while(i < input.size() - 1 && !Objects.equals(input.get(++i), "")) {
                 long[] mappingNumbers = Arrays.stream(input.get(i).split(" ")).mapToLong(Long::parseLong).toArray();
-                for(int seedIndex = 0 ; seedIndex < seeds.size() ; seedIndex++){
-                    long mappingNumberDiff = seeds.get(seedIndex) - mappingNumbers[1];
-                    if (mappingNumberDiff < mappingNumbers[2] && mappingNumberDiff >= 0) {
-                        tempSeeds.set(seedIndex, mappingNumbers[0] + mappingNumberDiff);
+                singleMappings.add(new Mapping(mappingNumbers[1], mappingNumbers[0], mappingNumbers[2]));
+            }
+            allMappings.add(singleMappings);
+        }
+        return mapOneLevel(seedRanges, allMappings);
+    }
+
+    public long mapOneLevel(List<SeedRange> seedRanges, List<List<Mapping>> mappings) {
+        if(!mappings.isEmpty()) {
+            List<Mapping> currentMapping = mappings.getFirst();
+            List<List<Mapping>> nextLevel = mappings.subList(1, mappings.size());
+            long minOfRanges = Long.MAX_VALUE;
+            for (SeedRange currentSeedRange : seedRanges) {
+                long mapped = Long.MAX_VALUE;
+                boolean foundMap = false;
+                for (Mapping map : currentMapping) {
+                    long fromStop = map.from + map.range - 1;
+                    long startWhenOutside = map.to + currentSeedRange.start - map.from;
+                    long stopWhenOutside = map.to + currentSeedRange.stop - map.from;
+                    if (matchesFullRange(map, currentSeedRange)) {
+                        foundMap = true;
+                        mapped = mapOneLevel(List.of(new SeedRange(startWhenOutside, stopWhenOutside)), nextLevel);
+                    } else if (matchesInnerRange(map, currentSeedRange)) {
+                        foundMap = true;
+                        mapped = Math.min(mapOneLevel(List.of(new SeedRange(map.to, map.to + map.range)), nextLevel),
+                                mapOneLevel(List.of(new SeedRange(currentSeedRange.start, map.from - 1), new SeedRange(fromStop + 1, currentSeedRange.stop)), mappings));
+                    } else if (matchesLeftRange(map, currentSeedRange)) {
+                        foundMap = true;
+                        mapped = Math.min(mapOneLevel(List.of(new SeedRange(startWhenOutside, map.to + map.range)), nextLevel),
+                                mapOneLevel(List.of(new SeedRange(fromStop + 1, currentSeedRange.stop)), mappings));
+                    } else if (matchesRightRange(map, currentSeedRange)) {
+                        foundMap = true;
+                        mapped = Math.min(mapOneLevel(List.of(new SeedRange(map.to, stopWhenOutside)), nextLevel),
+                                mapOneLevel(List.of(new SeedRange(currentSeedRange.start, map.from - 1)), mappings));
                     }
                 }
+                if (!foundMap) {
+                    mapped = mapOneLevel(List.of(currentSeedRange), nextLevel);
+                }
+                minOfRanges = Math.min(mapped, minOfRanges);
             }
-            seeds = new ArrayList<>(tempSeeds);
+            return minOfRanges;
         }
-        Collections.sort(seeds);
-        return seeds.get(0);
+        return seedRanges.stream().mapToLong(seedRange -> seedRange.start).min().orElseThrow();
     }
+
+    private boolean matchesFullRange(Mapping mapping, SeedRange seed) {
+        return mapping.from <= seed.start && seed.stop < mapping.from + mapping.range;
+    }
+
+    private boolean matchesInnerRange(Mapping mapping, SeedRange seed) {
+        return seed.start < mapping.from && mapping.from + mapping.range <= seed.stop;
+    }
+
+    private boolean matchesLeftRange(Mapping mapping, SeedRange seed) {
+        return mapping.from <= seed.start && seed.start <= mapping.from + mapping.range - 1;
+    }
+
+    private boolean matchesRightRange(Mapping mapping, SeedRange seed) {
+        return mapping.from <= seed.stop && seed.stop <= mapping.from + mapping.range - 1;
+    }
+
+    public record Mapping (long from, long to, long range){}
+    public record SeedRange (long start, long stop){}
+
 }
